🚀 Fix and added font fallbacks

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>InstaMutuals</title>
   </head>
 
-  <body class="bg-zinc-900 text-white roboto cursor-default select-none">
+  <body class="bg-zinc-900 text-white cursor-default select-none">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
